cmake_minimum_required(VERSION 3.15)
project(myAtoi)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -Wall")
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(myAtoi test.cpp)
target_link_libraries(myAtoi ${GTEST_BOTH_LIBRARIES})
target_link_libraries(myAtoi ${CMAKE_THREAD_LIBS_INIT})
add_test(Test myAtoi)
enable_testing()